// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AnalysisStats renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    class="stats-grid"
  >
    <div
      class="stat-card  "
    >
      <div
        class="value"
      >
        0
      </div>
      <div
        class="label"
      >
        総段落数
      </div>
    </div>
    <div
      class="stat-card  "
    >
      <div
        class="value"
      >
        0
      </div>
      <div
        class="label"
      >
        文字数超過
      </div>
    </div>
    <div
      class="stat-card  "
    >
      <div
        class="value"
      >
        0
      </div>
      <div
        class="label"
      >
        文字数不足
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnalysisStats renders correctly with given props 1`] = `
<DocumentFragment>
  <div
    class="stats-grid"
  >
    <div
      class="stat-card  "
    >
      <div
        class="value"
      >
        10
      </div>
      <div
        class="label"
      >
        総段落数
      </div>
    </div>
    <div
      class="stat-card is-danger "
    >
      <div
        class="value"
      >
        2
      </div>
      <div
        class="label"
      >
        文字数超過
      </div>
    </div>
    <div
      class="stat-card  is-warning"
    >
      <div
        class="value"
      >
        3
      </div>
      <div
        class="label"
      >
        文字数不足
      </div>
    </div>
  </div>
</DocumentFragment>
`;
